--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Name - Portfolio</title>
+  <title>Baisali Paul - Portfolio</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
     header { background: #f4f4f4; padding: 40px 20px; text-align: center; }
@@ -21,8 +21,8 @@
 <body>
 
 <header>
-  <h1>Your Name</h1>
-  <p>Marketing | Web Design | Data Analytics</p>
+  <h1>Baisali Paul</h1>
+  <p>Digital Marketing</p>
 </header>
 
 <nav>
